updated bootstrap, jquery and popper.js to latest versions

--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "lite-server": "^2.5.4"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.12.9"
+    "bootstrap": "^4.3.1",
+    "bootstrap4": "0.0.1-security",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1"
   }
 }
